--- a/style.css
+++ b/style.css
@@ -87,3 +87,10 @@ body{
 .computerInfo{
     display: grid;
 }
+
+.computerResult{
+    width: 100%;
+    text-align: center;
+    font-size: 200px;
+    margin-top:-100px
+}
