--- a/style.css
+++ b/style.css
@@ -92,5 +92,34 @@ body{
     width: 100%;
     text-align: center;
     font-size: 200px;
-    margin-top:-100px
+    margin-top:-100px;
 }
+
+.userSet{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 150px;
+}
+
+.gameUserButton{
+    text-align: center;
+    font-size: 100px;
+    width: 150px;
+    height: 150px;
+}
+
+/*
+.userSissorsButton{}
+.userRockButton{}
+.userPaperButton{}
+*/
+
+.currentGameResult{
+    width: 100%;
+    font-family: 'Ramche';
+    font-size: 30px;
+    text-align: center;
+}
+
+/* 진행 상황이랑 버튼 수정하면 좋을듯함 */
